// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RobotForm should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RobotForm
    addRobot={[Function]}
    editRobot={[Function]}
    editing={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form
        className="robot-form"
        onSubmit={[Function]}
>
        <label
                className="robot-form__label"
                htmlFor="current_name"
        >
                Current Name:
        </label>
        <input
                autoComplete="none"
                className="robot-form__input"
                name="current_name"
                onChange={[Function]}
                type="text"
                value=""
        />
        <label
                className="robot-form__label"
                htmlFor="height"
        >
                Height:
        </label>
        <input
                className="robot-form__input"
                name="height"
                onChange={[Function]}
                placeholder="feet"
                type="number"
                value={0}
        />
        <label
                className="robot-form__label"
                htmlFor="weight"
        >
                Weight:
        </label>
        <input
                className="robot-form__input"
                name="weight"
                onChange={[Function]}
                placeholder="pounds"
                type="number"
                value={0}
        />
        <label
                className="robot-form__label"
                htmlFor="intelligence_metric"
        >
                Intelligence Metric:
        </label>
        <input
                className="robot-form__input"
                max="20"
                min="1"
                name="intelligence_metric"
                onChange={[Function]}
                placeholder="From 1 to 20"
                step="1"
                type="number"
                value={0}
        />
        <label
                className="robot-form__label"
                htmlFor="date_added"
        >
                Date Added:
        </label>
        <input
                className="robot-form__input"
                name="date_added"
                onChange={[Function]}
                placeholder="YYYY-MM-DD"
                type="text"
                value=""
        />
        <label
                className="robot-form__label"
                htmlFor="first_active"
        >
                First Active:
        </label>
        <input
                className="robot-form__input"
                name="first_active"
                onChange={[Function]}
                placeholder="YYYY-MM-DD"
                type="text"
                value=""
        />
        <input
                className="robot-form__submit"
                type="submit"
                value="Submit"
        />
</form>,
      "className": "form-container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="robot-form__label"
            htmlFor="current_name"
>
            Current Name:
</label>,
          <input
            autoComplete="none"
            className="robot-form__input"
            name="current_name"
            onChange={[Function]}
            type="text"
            value=""
/>,
          <label
            className="robot-form__label"
            htmlFor="height"
>
            Height:
</label>,
          <input
            className="robot-form__input"
            name="height"
            onChange={[Function]}
            placeholder="feet"
            type="number"
            value={0}
/>,
          <label
            className="robot-form__label"
            htmlFor="weight"
>
            Weight:
</label>,
          <input
            className="robot-form__input"
            name="weight"
            onChange={[Function]}
            placeholder="pounds"
            type="number"
            value={0}
/>,
          <label
            className="robot-form__label"
            htmlFor="intelligence_metric"
>
            Intelligence Metric:
</label>,
          <input
            className="robot-form__input"
            max="20"
            min="1"
            name="intelligence_metric"
            onChange={[Function]}
            placeholder="From 1 to 20"
            step="1"
            type="number"
            value={0}
/>,
          <label
            className="robot-form__label"
            htmlFor="date_added"
>
            Date Added:
</label>,
          <input
            className="robot-form__input"
            name="date_added"
            onChange={[Function]}
            placeholder="YYYY-MM-DD"
            type="text"
            value=""
/>,
          <label
            className="robot-form__label"
            htmlFor="first_active"
>
            First Active:
</label>,
          <input
            className="robot-form__input"
            name="first_active"
            onChange={[Function]}
            placeholder="YYYY-MM-DD"
            type="text"
            value=""
/>,
          <input
            className="robot-form__submit"
            type="submit"
            value="Submit"
/>,
        ],
        "className": "robot-form",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Current Name:",
            "className": "robot-form__label",
            "htmlFor": "current_name",
          },
          "ref": null,
          "rendered": "Current Name:",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autoComplete": "none",
            "className": "robot-form__input",
            "name": "current_name",
            "onChange": [Function],
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Height:",
            "className": "robot-form__label",
            "htmlFor": "height",
          },
          "ref": null,
          "rendered": "Height:",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "robot-form__input",
            "name": "height",
            "onChange": [Function],
            "placeholder": "feet",
            "type": "number",
            "value": 0,
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Weight:",
            "className": "robot-form__label",
            "htmlFor": "weight",
          },
          "ref": null,
          "rendered": "Weight:",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "robot-form__input",
            "name": "weight",
            "onChange": [Function],
            "placeholder": "pounds",
            "type": "number",
            "value": 0,
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Intelligence Metric:",
            "className": "robot-form__label",
            "htmlFor": "intelligence_metric",
          },
          "ref": null,
          "rendered": "Intelligence Metric:",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "robot-form__input",
            "max": "20",
            "min": "1",
            "name": "intelligence_metric",
            "onChange": [Function],
            "placeholder": "From 1 to 20",
            "step": "1",
            "type": "number",
            "value": 0,
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Date Added:",
            "className": "robot-form__label",
            "htmlFor": "date_added",
          },
          "ref": null,
          "rendered": "Date Added:",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "robot-form__input",
            "name": "date_added",
            "onChange": [Function],
            "placeholder": "YYYY-MM-DD",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "First Active:",
            "className": "robot-form__label",
            "htmlFor": "first_active",
          },
          "ref": null,
          "rendered": "First Active:",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "robot-form__input",
            "name": "first_active",
            "onChange": [Function],
            "placeholder": "YYYY-MM-DD",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "robot-form__submit",
            "type": "submit",
            "value": "Submit",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
      ],
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form
          className="robot-form"
          onSubmit={[Function]}
>
          <label
                    className="robot-form__label"
                    htmlFor="current_name"
          >
                    Current Name:
          </label>
          <input
                    autoComplete="none"
                    className="robot-form__input"
                    name="current_name"
                    onChange={[Function]}
                    type="text"
                    value=""
          />
          <label
                    className="robot-form__label"
                    htmlFor="height"
          >
                    Height:
          </label>
          <input
                    className="robot-form__input"
                    name="height"
                    onChange={[Function]}
                    placeholder="feet"
                    type="number"
                    value={0}
          />
          <label
                    className="robot-form__label"
                    htmlFor="weight"
          >
                    Weight:
          </label>
          <input
                    className="robot-form__input"
                    name="weight"
                    onChange={[Function]}
                    placeholder="pounds"
                    type="number"
                    value={0}
          />
          <label
                    className="robot-form__label"
                    htmlFor="intelligence_metric"
          >
                    Intelligence Metric:
          </label>
          <input
                    className="robot-form__input"
                    max="20"
                    min="1"
                    name="intelligence_metric"
                    onChange={[Function]}
                    placeholder="From 1 to 20"
                    step="1"
                    type="number"
                    value={0}
          />
          <label
                    className="robot-form__label"
                    htmlFor="date_added"
          >
                    Date Added:
          </label>
          <input
                    className="robot-form__input"
                    name="date_added"
                    onChange={[Function]}
                    placeholder="YYYY-MM-DD"
                    type="text"
                    value=""
          />
          <label
                    className="robot-form__label"
                    htmlFor="first_active"
          >
                    First Active:
          </label>
          <input
                    className="robot-form__input"
                    name="first_active"
                    onChange={[Function]}
                    placeholder="YYYY-MM-DD"
                    type="text"
                    value=""
          />
          <input
                    className="robot-form__submit"
                    type="submit"
                    value="Submit"
          />
</form>,
        "className": "form-container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <label
              className="robot-form__label"
              htmlFor="current_name"
>
              Current Name:
</label>,
            <input
              autoComplete="none"
              className="robot-form__input"
              name="current_name"
              onChange={[Function]}
              type="text"
              value=""
/>,
            <label
              className="robot-form__label"
              htmlFor="height"
>
              Height:
</label>,
            <input
              className="robot-form__input"
              name="height"
              onChange={[Function]}
              placeholder="feet"
              type="number"
              value={0}
/>,
            <label
              className="robot-form__label"
              htmlFor="weight"
>
              Weight:
</label>,
            <input
              className="robot-form__input"
              name="weight"
              onChange={[Function]}
              placeholder="pounds"
              type="number"
              value={0}
/>,
            <label
              className="robot-form__label"
              htmlFor="intelligence_metric"
>
              Intelligence Metric:
</label>,
            <input
              className="robot-form__input"
              max="20"
              min="1"
              name="intelligence_metric"
              onChange={[Function]}
              placeholder="From 1 to 20"
              step="1"
              type="number"
              value={0}
/>,
            <label
              className="robot-form__label"
              htmlFor="date_added"
>
              Date Added:
</label>,
            <input
              className="robot-form__input"
              name="date_added"
              onChange={[Function]}
              placeholder="YYYY-MM-DD"
              type="text"
              value=""
/>,
            <label
              className="robot-form__label"
              htmlFor="first_active"
>
              First Active:
</label>,
            <input
              className="robot-form__input"
              name="first_active"
              onChange={[Function]}
              placeholder="YYYY-MM-DD"
              type="text"
              value=""
/>,
            <input
              className="robot-form__submit"
              type="submit"
              value="Submit"
/>,
          ],
          "className": "robot-form",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Current Name:",
              "className": "robot-form__label",
              "htmlFor": "current_name",
            },
            "ref": null,
            "rendered": "Current Name:",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autoComplete": "none",
              "className": "robot-form__input",
              "name": "current_name",
              "onChange": [Function],
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Height:",
              "className": "robot-form__label",
              "htmlFor": "height",
            },
            "ref": null,
            "rendered": "Height:",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "robot-form__input",
              "name": "height",
              "onChange": [Function],
              "placeholder": "feet",
              "type": "number",
              "value": 0,
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Weight:",
              "className": "robot-form__label",
              "htmlFor": "weight",
            },
            "ref": null,
            "rendered": "Weight:",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "robot-form__input",
              "name": "weight",
              "onChange": [Function],
              "placeholder": "pounds",
              "type": "number",
              "value": 0,
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Intelligence Metric:",
              "className": "robot-form__label",
              "htmlFor": "intelligence_metric",
            },
            "ref": null,
            "rendered": "Intelligence Metric:",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "robot-form__input",
              "max": "20",
              "min": "1",
              "name": "intelligence_metric",
              "onChange": [Function],
              "placeholder": "From 1 to 20",
              "step": "1",
              "type": "number",
              "value": 0,
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Date Added:",
              "className": "robot-form__label",
              "htmlFor": "date_added",
            },
            "ref": null,
            "rendered": "Date Added:",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "robot-form__input",
              "name": "date_added",
              "onChange": [Function],
              "placeholder": "YYYY-MM-DD",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "First Active:",
              "className": "robot-form__label",
              "htmlFor": "first_active",
            },
            "ref": null,
            "rendered": "First Active:",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "robot-form__input",
              "name": "first_active",
              "onChange": [Function],
              "placeholder": "YYYY-MM-DD",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "robot-form__submit",
              "type": "submit",
              "value": "Submit",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
        ],
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`RobotForm should match the snapshot if editing card present 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RobotForm
    addRobot={[Function]}
    editRobot={[Function]}
    editing={
        Object {
            "current_name": "R2-D2",
            "date_added": "5/21/2018",
            "first_active": "5/21/2018",
            "height": 3.25,
            "id": 1,
            "intelligence_metric": 18,
            "weight": 200,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form
        className="robot-form"
        onSubmit={[Function]}
>
        <label
                className="robot-form__label"
                htmlFor="current_name"
        >
                Current Name:
        </label>
        <input
                autoComplete="none"
                className="robot-form__input"
                name="current_name"
                onChange={[Function]}
                type="text"
                value="R2-D2"
        />
        <label
                className="robot-form__label"
                htmlFor="height"
        >
                Height:
        </label>
        <input
                className="robot-form__input"
                name="height"
                onChange={[Function]}
                placeholder="feet"
                type="number"
                value={3.25}
        />
        <label
                className="robot-form__label"
                htmlFor="weight"
        >
                Weight:
        </label>
        <input
                className="robot-form__input"
                name="weight"
                onChange={[Function]}
                placeholder="pounds"
                type="number"
                value={200}
        />
        <label
                className="robot-form__label"
                htmlFor="intelligence_metric"
        >
                Intelligence Metric:
        </label>
        <input
                className="robot-form__input"
                max="20"
                min="1"
                name="intelligence_metric"
                onChange={[Function]}
                placeholder="From 1 to 20"
                step="1"
                type="number"
                value={18}
        />
        <label
                className="robot-form__label"
                htmlFor="date_added"
        >
                Date Added:
        </label>
        <input
                className="robot-form__input"
                name="date_added"
                onChange={[Function]}
                placeholder="YYYY-MM-DD"
                type="text"
                value="5/21/2018"
        />
        <label
                className="robot-form__label"
                htmlFor="first_active"
        >
                First Active:
        </label>
        <input
                className="robot-form__input"
                name="first_active"
                onChange={[Function]}
                placeholder="YYYY-MM-DD"
                type="text"
                value="5/21/2018"
        />
        <input
                className="robot-form__submit"
                type="submit"
                value="Submit"
        />
</form>,
      "className": "form-container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="robot-form__label"
            htmlFor="current_name"
>
            Current Name:
</label>,
          <input
            autoComplete="none"
            className="robot-form__input"
            name="current_name"
            onChange={[Function]}
            type="text"
            value="R2-D2"
/>,
          <label
            className="robot-form__label"
            htmlFor="height"
>
            Height:
</label>,
          <input
            className="robot-form__input"
            name="height"
            onChange={[Function]}
            placeholder="feet"
            type="number"
            value={3.25}
/>,
          <label
            className="robot-form__label"
            htmlFor="weight"
>
            Weight:
</label>,
          <input
            className="robot-form__input"
            name="weight"
            onChange={[Function]}
            placeholder="pounds"
            type="number"
            value={200}
/>,
          <label
            className="robot-form__label"
            htmlFor="intelligence_metric"
>
            Intelligence Metric:
</label>,
          <input
            className="robot-form__input"
            max="20"
            min="1"
            name="intelligence_metric"
            onChange={[Function]}
            placeholder="From 1 to 20"
            step="1"
            type="number"
            value={18}
/>,
          <label
            className="robot-form__label"
            htmlFor="date_added"
>
            Date Added:
</label>,
          <input
            className="robot-form__input"
            name="date_added"
            onChange={[Function]}
            placeholder="YYYY-MM-DD"
            type="text"
            value="5/21/2018"
/>,
          <label
            className="robot-form__label"
            htmlFor="first_active"
>
            First Active:
</label>,
          <input
            className="robot-form__input"
            name="first_active"
            onChange={[Function]}
            placeholder="YYYY-MM-DD"
            type="text"
            value="5/21/2018"
/>,
          <input
            className="robot-form__submit"
            type="submit"
            value="Submit"
/>,
        ],
        "className": "robot-form",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Current Name:",
            "className": "robot-form__label",
            "htmlFor": "current_name",
          },
          "ref": null,
          "rendered": "Current Name:",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autoComplete": "none",
            "className": "robot-form__input",
            "name": "current_name",
            "onChange": [Function],
            "type": "text",
            "value": "R2-D2",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Height:",
            "className": "robot-form__label",
            "htmlFor": "height",
          },
          "ref": null,
          "rendered": "Height:",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "robot-form__input",
            "name": "height",
            "onChange": [Function],
            "placeholder": "feet",
            "type": "number",
            "value": 3.25,
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Weight:",
            "className": "robot-form__label",
            "htmlFor": "weight",
          },
          "ref": null,
          "rendered": "Weight:",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "robot-form__input",
            "name": "weight",
            "onChange": [Function],
            "placeholder": "pounds",
            "type": "number",
            "value": 200,
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Intelligence Metric:",
            "className": "robot-form__label",
            "htmlFor": "intelligence_metric",
          },
          "ref": null,
          "rendered": "Intelligence Metric:",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "robot-form__input",
            "max": "20",
            "min": "1",
            "name": "intelligence_metric",
            "onChange": [Function],
            "placeholder": "From 1 to 20",
            "step": "1",
            "type": "number",
            "value": 18,
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Date Added:",
            "className": "robot-form__label",
            "htmlFor": "date_added",
          },
          "ref": null,
          "rendered": "Date Added:",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "robot-form__input",
            "name": "date_added",
            "onChange": [Function],
            "placeholder": "YYYY-MM-DD",
            "type": "text",
            "value": "5/21/2018",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "First Active:",
            "className": "robot-form__label",
            "htmlFor": "first_active",
          },
          "ref": null,
          "rendered": "First Active:",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "robot-form__input",
            "name": "first_active",
            "onChange": [Function],
            "placeholder": "YYYY-MM-DD",
            "type": "text",
            "value": "5/21/2018",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "robot-form__submit",
            "type": "submit",
            "value": "Submit",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
      ],
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form
          className="robot-form"
          onSubmit={[Function]}
>
          <label
                    className="robot-form__label"
                    htmlFor="current_name"
          >
                    Current Name:
          </label>
          <input
                    autoComplete="none"
                    className="robot-form__input"
                    name="current_name"
                    onChange={[Function]}
                    type="text"
                    value="R2-D2"
          />
          <label
                    className="robot-form__label"
                    htmlFor="height"
          >
                    Height:
          </label>
          <input
                    className="robot-form__input"
                    name="height"
                    onChange={[Function]}
                    placeholder="feet"
                    type="number"
                    value={3.25}
          />
          <label
                    className="robot-form__label"
                    htmlFor="weight"
          >
                    Weight:
          </label>
          <input
                    className="robot-form__input"
                    name="weight"
                    onChange={[Function]}
                    placeholder="pounds"
                    type="number"
                    value={200}
          />
          <label
                    className="robot-form__label"
                    htmlFor="intelligence_metric"
          >
                    Intelligence Metric:
          </label>
          <input
                    className="robot-form__input"
                    max="20"
                    min="1"
                    name="intelligence_metric"
                    onChange={[Function]}
                    placeholder="From 1 to 20"
                    step="1"
                    type="number"
                    value={18}
          />
          <label
                    className="robot-form__label"
                    htmlFor="date_added"
          >
                    Date Added:
          </label>
          <input
                    className="robot-form__input"
                    name="date_added"
                    onChange={[Function]}
                    placeholder="YYYY-MM-DD"
                    type="text"
                    value="5/21/2018"
          />
          <label
                    className="robot-form__label"
                    htmlFor="first_active"
          >
                    First Active:
          </label>
          <input
                    className="robot-form__input"
                    name="first_active"
                    onChange={[Function]}
                    placeholder="YYYY-MM-DD"
                    type="text"
                    value="5/21/2018"
          />
          <input
                    className="robot-form__submit"
                    type="submit"
                    value="Submit"
          />
</form>,
        "className": "form-container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <label
              className="robot-form__label"
              htmlFor="current_name"
>
              Current Name:
</label>,
            <input
              autoComplete="none"
              className="robot-form__input"
              name="current_name"
              onChange={[Function]}
              type="text"
              value="R2-D2"
/>,
            <label
              className="robot-form__label"
              htmlFor="height"
>
              Height:
</label>,
            <input
              className="robot-form__input"
              name="height"
              onChange={[Function]}
              placeholder="feet"
              type="number"
              value={3.25}
/>,
            <label
              className="robot-form__label"
              htmlFor="weight"
>
              Weight:
</label>,
            <input
              className="robot-form__input"
              name="weight"
              onChange={[Function]}
              placeholder="pounds"
              type="number"
              value={200}
/>,
            <label
              className="robot-form__label"
              htmlFor="intelligence_metric"
>
              Intelligence Metric:
</label>,
            <input
              className="robot-form__input"
              max="20"
              min="1"
              name="intelligence_metric"
              onChange={[Function]}
              placeholder="From 1 to 20"
              step="1"
              type="number"
              value={18}
/>,
            <label
              className="robot-form__label"
              htmlFor="date_added"
>
              Date Added:
</label>,
            <input
              className="robot-form__input"
              name="date_added"
              onChange={[Function]}
              placeholder="YYYY-MM-DD"
              type="text"
              value="5/21/2018"
/>,
            <label
              className="robot-form__label"
              htmlFor="first_active"
>
              First Active:
</label>,
            <input
              className="robot-form__input"
              name="first_active"
              onChange={[Function]}
              placeholder="YYYY-MM-DD"
              type="text"
              value="5/21/2018"
/>,
            <input
              className="robot-form__submit"
              type="submit"
              value="Submit"
/>,
          ],
          "className": "robot-form",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Current Name:",
              "className": "robot-form__label",
              "htmlFor": "current_name",
            },
            "ref": null,
            "rendered": "Current Name:",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autoComplete": "none",
              "className": "robot-form__input",
              "name": "current_name",
              "onChange": [Function],
              "type": "text",
              "value": "R2-D2",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Height:",
              "className": "robot-form__label",
              "htmlFor": "height",
            },
            "ref": null,
            "rendered": "Height:",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "robot-form__input",
              "name": "height",
              "onChange": [Function],
              "placeholder": "feet",
              "type": "number",
              "value": 3.25,
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Weight:",
              "className": "robot-form__label",
              "htmlFor": "weight",
            },
            "ref": null,
            "rendered": "Weight:",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "robot-form__input",
              "name": "weight",
              "onChange": [Function],
              "placeholder": "pounds",
              "type": "number",
              "value": 200,
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Intelligence Metric:",
              "className": "robot-form__label",
              "htmlFor": "intelligence_metric",
            },
            "ref": null,
            "rendered": "Intelligence Metric:",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "robot-form__input",
              "max": "20",
              "min": "1",
              "name": "intelligence_metric",
              "onChange": [Function],
              "placeholder": "From 1 to 20",
              "step": "1",
              "type": "number",
              "value": 18,
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Date Added:",
              "className": "robot-form__label",
              "htmlFor": "date_added",
            },
            "ref": null,
            "rendered": "Date Added:",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "robot-form__input",
              "name": "date_added",
              "onChange": [Function],
              "placeholder": "YYYY-MM-DD",
              "type": "text",
              "value": "5/21/2018",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "First Active:",
              "className": "robot-form__label",
              "htmlFor": "first_active",
            },
            "ref": null,
            "rendered": "First Active:",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "robot-form__input",
              "name": "first_active",
              "onChange": [Function],
              "placeholder": "YYYY-MM-DD",
              "type": "text",
              "value": "5/21/2018",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "robot-form__submit",
              "type": "submit",
              "value": "Submit",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
        ],
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
